fixing oops from checkin for bug 157135 (reported as bug 172930)